# LogAnalyzer

./: .gitignore  CMakeLists.txt  LICENSE-THIRD-PARTY  README.md  comlib.sublime-project
console/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  commands_repo.cpp  commands_repo.hpp  files_repo.cpp  files_repo.hpp  flavors_repo.cpp  flavors_repo.hpp  inspectors_repo.cpp  inspectors_repo.hpp  lines_repo.cpp  lines_repo.hpp  lines_tools.cpp  lines_tools.hpp  log_line.cpp  log_line.hpp  mmap_file.cpp  mmap_file.hpp  translators_repo.cpp  translators_repo.hpp  utils.cpp  utils.hpp
core/commands/: cmd_wcs_comlib.cpp  cmd_wcs_comlib.hpp  cmd_wcs_comlib_utils.cpp  cmd_wcs_comlib_utils.hpp  cmd_wcs_server.cpp  cmd_wcs_server.hpp  cmd_wcs_ui_android.cpp  cmd_wcs_ui_android.hpp
core/flavors/: flavor_wcs_android_logcat.cpp  flavor_wcs_android_logcat.hpp  flavor_wcs_comlib.cpp  flavor_wcs_comlib.hpp  flavor_wcs_server.cpp  flavor_wcs_server.hpp
core/inspectors/: inspector_wcs_comlib.cpp  inspector_wcs_comlib.hpp
core/translators/: translator_wcs_comlib.cpp  translator_wcs_comlib.hpp
shared/: CMakeLists.txt  api.cpp  api.h
